feat: add optional declarative notes themes
